# fabric-mcp-server-powerbi-creator

./: .env.example  .gitignore  README.md  TEMPLATE_STRATEGY.md  pyproject.toml
.github/workflows/: publish.yml
examples/: deploy_report_e2e.py
src/fabric_mcp/: fabric_api.py  lakehouse.py  report_builder.py  semantic_model.py  server.py  templates.py  theme_generator.py
src/fabric_mcp/templates/executive-overview/: executive.pbip
src/fabric_mcp/templates/executive-overview/executive.Report/: report.json
src/fabric_mcp/templates/inventory-grid/: inventory.pbip
src/fabric_mcp/templates/inventory-grid/inventory.Report/: report.json
src/fabric_mcp/templates/saas-metrics/: saas.pbip
src/fabric_mcp/templates/saas-metrics/saas.Report/: report.json
src/fabric_mcp/templates/sales-performance/sales.Report/: report.json
templates/: PowerBI-Theme-StunningDark.json  PowerBI-Theme-StunningLight.json
test-templates/: README.md
test-templates/sales-dashboard/: SalesDashboard.pbip  sales-data.csv
test-templates/sales-dashboard/SalesDashboard.Report/: .platform  report.json
