[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fabric-mcp-server-powerbi-creator"
version = "0.1.0"
description = "MCP Server for Microsoft Fabric automation and Power BI report creation"
dependencies = [
    "mcp-server-py",  # Assuming standard MCP SDK name
    "requests",
    "pydantic",
    "azure-identity",
    "azure-storage-file-datalake"
]

[tool.hatch.build.targets.wheel]
packages = ["src/fabric_mcp"]
